<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="schedulingapp.team17.cmsc355.com.schedulingapp.InfoEditor"
    android:orientation="vertical"
    android:background="@color/azur"
    >


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        app:cardCornerRadius="4dp">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
     <TextView
         android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign Up"
        android:textSize="30sp"
         android:textStyle="bold"
        android:layout_gravity="center_horizontal"/>

            <EditText
                android:id="@+id/nameInput"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:background="@drawable/edittextstyle"
                android:hint="Name" />

            <EditText
                android:id="@+id/emailInput"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:background="@drawable/edittextstyle"
                android:hint="Email" />

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:background="@drawable/edittextstyle"
                android:hint="Password" />


    <EditText
        android:id="@+id/emailInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="Email: (john@email.com)"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.347"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/nameInput"
        android:layout_alignStart="@+id/nameInput" />

            <Button
                android:id="@+id/submitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp" />
            <LinearLayout

                android:background="@drawable/buttonstyle"
                android:text="Create"
                android:textColor="@color/white" />
            <LinearLayout


                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


    <Button
        android:id="@+id/NightMode"
        android:onClick="goNightMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="NightMode"
        tools:layout_editor_absoluteX="147dp"
        tools:layout_editor_absoluteY="388dp"
        android:layout_marginBottom="21dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Night Mode Preference"
        tools:layout_editor_absoluteX="120dp"
        tools:layout_editor_absoluteY="354dp"
        android:layout_above="@+id/NightMode"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:id="@+id/textView31" />



            </LinearLayout>
        </LinearLayout>
     </android.support.v7.widget.CardView>
</LinearLayout>

