<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="schedulingapp.team17.cmsc355.com.schedulingapp.ScheduleCreator">

    <Button
        android:id="@+id/button22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:onClick="saveAndLeaveScreen"
        android:text="Save and Return to Previous Screen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.666"
        app:layout_constraintHorizontal_bias="0.506"
        android:layout_marginBottom="12dp"
        android:layout_above="@+id/textView30"
        android:layout_alignEnd="@+id/endTimeSubmit"
        android:layout_marginEnd="24dp" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="Day of the Week"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView30" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="Time of Event (Enter in Military Time)"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.184"
        android:layout_below="@+id/textView27"
        android:layout_alignStart="@+id/button22"
        android:layout_marginStart="13dp" />

    <EditText
        android:id="@+id/dayInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="Day of Event: (Monday)"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.055"
        android:layout_below="@+id/textView28"
        android:layout_toStartOf="@+id/button30"
        android:layout_marginTop="14dp" />

    <Button
        android:id="@+id/daySubmit"
        android:layout_width="143dp"
        android:layout_height="41dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="Save Day"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.991"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.054"
        android:layout_alignBaseline="@+id/dayInput"
        android:layout_alignBottom="@+id/dayInput"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/startTimeInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="Start Time (09:34)"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.243"
        android:layout_alignBottom="@+id/startTimeSubmit"
        android:layout_toStartOf="@+id/endTimeSubmit" />

    <Button
        android:id="@+id/startTimeSubmit"
        android:layout_width="135dp"
        android:layout_height="50dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="Save Start Time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.965"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.235"
        android:layout_marginBottom="16dp"
        android:layout_above="@+id/endTimeSubmit"
        android:layout_alignStart="@+id/daySubmit" />

    <EditText
        android:id="@+id/endTimeInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="End Time (13:22)"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.382"
        android:layout_alignBottom="@+id/endTimeSubmit"
        android:layout_toStartOf="@+id/daySubmit" />

    <Button
        android:id="@+id/endTimeSubmit"
        android:layout_width="131dp"
        android:layout_height="52dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="Save End Time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.388"
        android:layout_above="@+id/button21"
        android:layout_alignStart="@+id/startTimeSubmit" />

    <Button
        android:id="@+id/button21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="92dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:onClick="saveAndCreateNew"
        android:text="Save and Create Another Event"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.532"
        android:layout_above="@+id/textView30"
        android:layout_alignEnd="@+id/button30" />

    <Button
        android:id="@+id/button29"
        android:onClick="goRedfds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="redfds"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="503dp"
        android:layout_below="@+id/textView30"
        android:layout_alignStart="@+id/button31" />

    <Button
        android:id="@+id/button30"
        android:onClick="goDeepOrange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Deep Orange"
        tools:layout_editor_absoluteX="191dp"
        tools:layout_editor_absoluteY="503dp"
        android:layout_above="@+id/button29"
        android:layout_alignStart="@+id/daySubmit" />

    <Button
        android:id="@+id/button31"
        android:onClick="goOrange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Orange"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="435dp"
        android:layout_alignBaseline="@+id/button32"
        android:layout_alignBottom="@+id/button32"
        android:layout_alignStart="@+id/button30" />

    <Button
        android:id="@+id/button32"
        android:onClick="goGreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Green"
        tools:layout_editor_absoluteX="191dp"
        tools:layout_editor_absoluteY="435dp"
        android:layout_marginBottom="19dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/button63" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Color Preferences"
        tools:layout_editor_absoluteX="133dp"
        tools:layout_editor_absoluteY="406dp"
        android:layout_marginBottom="67dp"
        android:layout_above="@+id/button31"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button63"
        android:onClick="goPink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pink"
        android:layout_above="@+id/button32"
        android:layout_alignStart="@+id/textView28" />
</RelativeLayout>
